--- a/seats/templates/index.html
+++ b/seats/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Theater Seat Map</title>
-     Link to your CSS file 
+     <!-- Link to your CSS file  -->
     <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}"> -->
      <link rel="stylesheet" href="style1.css">
 </head>
